# photoshop-timing

./: .gitignore  README.md  index.html  log.html  package-lock.json  package.json  timing.html  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  wps_reader.rs
src/views/: log.ts  log.vue  main.vue  timing.ts  timing.vue
