[package]
name = "photoshop-timing"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photoshop_timing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
reqwest = {version ="0.12.23" ,features = ["json", "rustls-tls"] }
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-shell = "2"
rusqlite = {version = "0.37.0",features = ["bundled"] }
anyhow = "1.0.99"
uuid = {version = "1.18.0",features = ["v7", "fast-rng"] }
chrono = {version =  "0.4.41",features= ["clock"] }
tokio = "1.47.1"
tauri-plugin-clipboard-manager = "2"
cron = "0.15.0"
dotenv = "0.15.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

